// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard-grid render default 1`] = `

<div>
  <div class="flex grow flex-col bg-secondary px-8 py-8 dark:bg-black">
    <div class="flex gap-2 pb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items
      >
      </gui-filter-search>
      <gui-dashboard-view-toggle currentview="grid">
      </gui-dashboard-view-toggle>
      <div style="opacity: 1;">
        <gui-sort-toggle
          filtereditems
          sortkey="name"
        >
        </gui-sort-toggle>
      </div>
      <div class="flex grow flex-row-reverse">
        <gui-button classname="ml-2">
          <gui-plus-icon size="24">
          </gui-plus-icon>
          Create New Project
        </gui-button>
      </div>
    </div>
    <div
      class="flex flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <p>
          No projects found
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`dashboard-grid with results 1`] = `

<div>
  <div class="flex grow flex-col bg-secondary px-8 py-8 dark:bg-black">
    <div class="flex gap-2 pb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items="[object Object],[object Object]"
      >
      </gui-filter-search>
      <gui-dashboard-view-toggle currentview="grid">
      </gui-dashboard-view-toggle>
      <div style="opacity: 1;">
        <gui-sort-toggle
          filtereditems="[object Object],[object Object]"
          sortkey="name"
        >
        </gui-sort-toggle>
      </div>
      <div class="flex grow flex-row-reverse">
        <gui-button classname="ml-2">
          <gui-plus-icon size="24">
          </gui-plus-icon>
          Create New Project
        </gui-button>
      </div>
    </div>
    <div
      class="flex flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <a
          href="#"
          class="group relative w-full md:w-96"
        >
          <div class="relative flex h-20 items-center overflow-hidden rounded-t-lg border-x-[1px] border-t-[1px] bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-700">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md font-medium">
                project-bar
              </gui-card-title>
            </div>
            <div class="absolute right-0 top-0 z-[1] flex flex-row rounded-sm px-3 py-2 backdrop-blur-[1px]">
              <p class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute -inset-4 -right-2 flex flex-row items-center justify-end gap-2 bg-clip-content">
              <gui-package-manager-pnpm-icon classname="size-24 fill-neutral-200/40 dark:fill-neutral-900/80">
              </gui-package-manager-pnpm-icon>
            </div>
          </div>
          <div class="flex w-full items-center rounded-b-lg border-[1px] bg-card px-3 py-3 transition-all group-hover:border-x-neutral-400 group-hover:border-b-neutral-400 dark:group-hover:border-x-neutral-700 dark:group-hover:border-b-neutral-700">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="truncate text-left text-xs text-muted-foreground">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </a>
        <a
          href="#"
          class="group relative w-full md:w-96"
        >
          <div class="relative flex h-20 items-center overflow-hidden rounded-t-lg border-x-[1px] border-t-[1px] bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-700">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md font-medium">
                project-foo
              </gui-card-title>
            </div>
            <div class="absolute right-0 top-0 z-[1] flex flex-row rounded-sm px-3 py-2 backdrop-blur-[1px]">
              <p class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute -inset-4 -right-2 flex flex-row items-center justify-end gap-2 bg-clip-content">
              <gui-package-manager-vlt-icon classname="size-24 fill-neutral-200/40 dark:fill-neutral-900/80">
              </gui-package-manager-vlt-icon>
              <gui-runtime-node-icon classname="size-24 fill-neutral-200/40 dark:fill-neutral-900/80">
              </gui-runtime-node-icon>
            </div>
          </div>
          <div class="flex w-full items-center rounded-b-lg border-[1px] bg-card px-3 py-3 transition-all group-hover:border-x-neutral-400 group-hover:border-b-neutral-400 dark:group-hover:border-x-neutral-700 dark:group-hover:border-b-neutral-700">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="truncate text-left text-xs text-muted-foreground">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>

`;
